# SwipeApi

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt
core/: config.py  database.py  providers.py
migrations/: env.py
migrations/versions/: e6212ba327d6_first_migration.py
src/apartment/: models.py
src/common/: models.py
src/house/: models.py  router.py
src/user/: models.py  router.py  schemas.py
